// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card/> renders correctly if contains CardAreaSide 1`] = `
<div
  className="CardStyled-egOvwJ eMIsCX"
  elevation={1}
>
  <div
    className="CardAreaSideStyled-idUIJJ iEcodt"
  />
</div>
`;

exports[`<Card/> renders correctly if prop size changing 1`] = `
<div
  className="CardStyled-egOvwJ eMIsCX"
  elevation={1}
>
  <div
    className="CardContentStyled-eXpgEI bCCZWM"
    size="large"
  />
</div>
`;

exports[`<Card/> renders correctly if prop size changing 2`] = `
<div
  className="CardStyled-egOvwJ eMIsCX"
  elevation={1}
>
  <div
    className="CardContentStyled-eXpgEI bCCZWM"
    size="xlarge"
  />
</div>
`;

exports[`<Card/> renders correctly with default props 1`] = `
<div
  className="CardStyled-egOvwJ eMIsCX"
  elevation={1}
>
  <div>
     test 
  </div>
</div>
`;

exports[`<CardActions/> renders correctly with default props 1`] = `
<div
  className="CardActionsStyled-iojRbO kinqsb"
  size="default"
>
  <div>
     test 
  </div>
</div>
`;

exports[`<CardActionsMain/> renders correctly with default props 1`] = `
<div
  className="CardActionsMainStyled-eJCwgY XsMdB"
  size="default"
>
  <div>
     test 
  </div>
</div>
`;

exports[`<CardActionsSupplemental/> renders correctly with default props 1`] = `
<div
  className="CardActionsSupplementalStyled-bZhMlP fBwYYd"
  size="default"
>
  <div>
     test 
  </div>
</div>
`;

exports[`<CardAreaMain/> renders correctly with default props 1`] = `
<div
  className="CardAreaMainStyled-bhXci cgbqBs"
>
  <div>
     test 
  </div>
</div>
`;

exports[`<CardAreaSide/> renders correctly with default props 1`] = `
<div
  className="CardAreaSideStyled-idUIJJ iEcodt"
>
  <div>
     test 
  </div>
</div>
`;

exports[`<CardContent/> renders correctly if prop last set false 1`] = `
<div
  className="CardContentStyled-eXpgEI iegvJK"
  size="default"
/>
`;

exports[`<CardContent/> renders correctly if prop last set true 1`] = `
<div
  className="CardContentStyled-eXpgEI dlppKT"
  size="default"
/>
`;

exports[`<CardContent/> renders correctly with default props 1`] = `
<div
  className="CardContentStyled-eXpgEI iegvJK"
  size="default"
>
  <div>
     test 
  </div>
</div>
`;

exports[`<CardContentText/> renders correctly with default props 1`] = `
<p
  className="CardContentTextStyled-ihOUSW gaxXsB"
  size="default"
>
  <div>
     test 
  </div>
</p>
`;

exports[`<CardHeaderPrimary/> renders correctly if prop subtitle set test 1`] = `
<div
  className="CardHeaderPrimaryStyled-hSQWwz laFTcJ"
  size="default"
>
  <div
    className="CardHeaderBoxStyled-eqowYz hOKnNi"
  >
    <h2
      className="CardHeaderTextStyled-OYREa iixgon"
      size="default"
    >
      
    </h2>
    <div
      className="CardSubheaderStyled-hGLFKT eHmZDq"
      size="default"
    >
      test
    </div>
  </div>
</div>
`;

exports[`<CardHeaderPrimary/> renders correctly if prop title set test 1`] = `
<div
  className="CardHeaderPrimaryStyled-hSQWwz laFTcJ"
  size="default"
>
  <div
    className="CardHeaderBoxStyled-eqowYz hOKnNi"
  >
    <h2
      className="CardHeaderTextStyled-OYREa iixgon"
      size="default"
    >
      test
    </h2>
  </div>
</div>
`;

exports[`<CardHeaderPrimary/> renders correctly with default props 1`] = `
<div
  className="CardHeaderPrimaryStyled-hSQWwz laFTcJ"
  size="default"
>
  <div
    className="CardHeaderBoxStyled-eqowYz hOKnNi"
  >
    <h2
      className="CardHeaderTextStyled-OYREa iixgon"
      size="default"
    >
      
    </h2>
  </div>
  <div
    className="CardHeaderMediaStyled-jZvFHX pGezn"
    size="default"
  >
    <div>
       test 
    </div>
  </div>
</div>
`;

exports[`<CardHeaderSecondary/> renders correctly if prop image set image.png 1`] = `
<div
  className="CardHeaderSecondaryStyled-bqsWeH KrrET"
  size="default"
>
  <div
    className="CardHeaderSecondaryImageStyled-gJSkO dWyfnh"
    size="default"
    style={
      Object {
        "backgroundImage": "url('./image.png')",
      }
    }
  />
  <div
    className="CardHeaderSecondaryTextBoxStyled-ejWykG iklcYU"
  >
    <div
      className="CardHeaderSecondaryTextStyled-kDiNLK kLBBdu"
      size="default"
    >
      
    </div>
  </div>
</div>
`;

exports[`<CardHeaderSecondary/> renders correctly if prop subtitle set test 1`] = `
<div
  className="CardHeaderSecondaryStyled-bqsWeH KrrET"
  size="default"
>
  <div
    className="CardHeaderSecondaryTextBoxStyled-ejWykG iklcYU"
  >
    <div
      className="CardHeaderSecondaryTextStyled-kDiNLK kLBBdu"
      size="default"
    >
      
    </div>
    <div
      className="CardSubheaderSecondaryStyled-lfDxSo kKdifI"
      size="default"
    >
      test
    </div>
  </div>
</div>
`;

exports[`<CardHeaderSecondary/> renders correctly if prop title set test 1`] = `
<div
  className="CardHeaderSecondaryStyled-bqsWeH KrrET"
  size="default"
>
  <div
    className="CardHeaderSecondaryTextBoxStyled-ejWykG iklcYU"
  >
    <div
      className="CardHeaderSecondaryTextStyled-kDiNLK kLBBdu"
      size="default"
    >
      test
    </div>
  </div>
</div>
`;

exports[`<CardHeaderSecondary/> renders correctly with default props 1`] = `
<div
  className="CardHeaderSecondaryStyled-bqsWeH KrrET"
  size="default"
>
  <div
    className="CardHeaderSecondaryTextBoxStyled-ejWykG iklcYU"
  >
    <div
      className="CardHeaderSecondaryTextStyled-kDiNLK kLBBdu"
      size="default"
    >
      
    </div>
  </div>
</div>
`;

exports[`<CardMedia/> renders correctly with default props 1`] = `
<div
  className="CardMediaStyled-cUEpZl bSWiJZ"
>
  <div
    className="CardMediaContentStyled-cENUeV jLwMXl"
  >
    <div>
       test 
    </div>
  </div>
</div>
`;
